# svgm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark-results.md  svgm.config.example.toml
.github/workflows/: ci.yml  release.yml
crates/svgm-cli/: Cargo.toml
crates/svgm-cli/src/: config_file.rs  main.rs
crates/svgm-cli/tests/: cli.rs
crates/svgm-core/: Cargo.toml
crates/svgm-core/benches/: baseline.json  corpus.rs
crates/svgm-core/src/: ast.rs  config.rs  lib.rs  optimizer.rs  parser.rs  serializer.rs
crates/svgm-core/src/passes/: cleanup_attrs.rs  cleanup_enable_background.rs  cleanup_numeric_values.rs  collapse_groups.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_path_data.rs  convert_shape_to_path.rs  convert_transform.rs  inline_styles.rs  merge_paths.rs  minify_styles.rs  minify_whitespace.rs  mod.rs  move_elems_attrs_to_group.rs  move_group_attrs_to_elems.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_doctype.rs  remove_editor_data.rs  remove_empty_attrs.rs  remove_empty_containers.rs  remove_empty_text.rs  remove_hidden_elems.rs  remove_metadata.rs  remove_non_inheritable_group_attrs.rs  remove_proc_inst.rs  remove_unknowns_and_defaults.rs  remove_unused_namespaces.rs  remove_useless_defs.rs  remove_useless_stroke_and_fill.rs  sort_attrs.rs  sort_defs_children.rs
crates/svgm-core/tests/: integration.rs
crates/svgm-napi/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/svgm-napi/__test__/: index.spec.ts
crates/svgm-napi/src/: lib.rs
crates/svgm-wasm/: Cargo.toml  README.md
crates/svgm-wasm/src/: lib.rs
crates/svgm-wasm/tests/: web.rs
