[workspace]
members = ["crates/svgm-core", "crates/svgm-cli", "crates/svgm-wasm"]
default-members = ["crates/svgm-core", "crates/svgm-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madebyfrmwrk/svgm"

[workspace.dependencies]
svgm-core = { path = "crates/svgm-core", version = "0.3.0" }
xmlparser = "0.13"
svgtypes = "0.16"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
