[package]
name = "svgm"
description = "SVG minimizer — fast, safe, single-pass SVG optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "svgm"
path = "src/main.rs"

[dependencies]
svgm-core.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
