[package]
name = "svgm-core"
description = "SVG optimization engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xmlparser.workspace = true
svgtypes.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "corpus"
harness = false
